updating the styling and organization

--- a/media.css
+++ b/media.css
@@ -12,7 +12,7 @@
 
     /* MOBILE PROFILE */
     #profile {
-        display: block;
+        /* display: block; */
     }
 
     .profile-pic-container {
