using new background colour and changed read me buttons

--- a/media.css
+++ b/media.css
@@ -172,9 +172,8 @@
         justify-content: center;
     }
 
-    .read-more-icon {
+    .experience-btn {
         display: flex;
-        height: 2rem;
     }
     
 
