--- a/style.css
+++ b/style.css
@@ -230,6 +230,10 @@ section {
     /* text-align: center; */
 }
 
+.experience-btn {
+    display: none;
+}
+
 .experience-inner-container {
     display: flex;
     justify-self: center;
