--- a/media.css
+++ b/media.css
@@ -90,14 +90,31 @@
 @media screen and (max-width: 992px) {
 
     body {
-        font-size: small;
+        /* font-size: var(--font-small); */
+        font-size: var(--moble-font-base);
     }
 
-    /* * {
-        margin: 0%;
-        padding: 0%;
-        font-size: 12px;
-    } */
+    .title {
+        font-size: var(--mobile-font-title);
+        font-weight: var(--font-bold);
+    }
+
+    .subtitle {
+        font-size: var(--mobile-font-subtitle);
+        font-weight: var(--font-bold);
+    }
+
+    section {
+        display: flex;
+        /* height: 115vh; */
+        /* height: 100%; */
+    }
+
+    .btn {
+        font-size: var(--moble-font-base);
+    }
+
+    
 
     /* MOBILE NAV */
     #desktop-nav {
@@ -107,12 +124,6 @@
     #mobile-nav {
         display: flex;
         /* justify-content: space-around; */
-    }
-
-    section {
-        display: flex;
-        /* height: 115vh; */
-        /* height: 100%; */
     }
 
     .outer-container {
@@ -133,11 +144,6 @@
         height: 100%;
         /* font-size: small; */
 
-    }
-
-    #intro {
-        margin: 0;
-        /* font-size: medium; */
     }
 
     .overview-container {
@@ -166,13 +172,15 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        height: 100%;
+        width: 85%;
     }
 
     .experience-desc {
         display: none;
     }
 
-    .experience-titles {
+    .experience-headers {
         /* display: flex; */
         align-items: center;
         justify-content: center;
@@ -183,19 +191,22 @@
     }
 
      /* MOBILE PROJECTS */
-     .projects-grid-outer {
+    .projects-grid-outer {
         display: flex;
         flex-direction: column;
-        /* font-size: small; */
-        height: 100%;
+        /* height: 100%; */
     }
 
-    .projects-grid-item {
+    .project-grid-item {
+        height: 45vh;
+    }
+
+    /* .projects-grid-item {
         background-color: var(--medium-pink);
         display: flex;
         flex-direction: column;
-        /* font-size: x-small; */
-    }
+        
+    } */
 
 
 }
