--- a/media.css
+++ b/media.css
@@ -103,6 +103,7 @@
 
     section {
         display: flex;
+        margin: 0.5rem;
     }
 
     /* MOBILE BUTTONS */
@@ -114,6 +115,10 @@
     .btn {
         font-size: var(--moble-font-base);
         color: black;
+    }
+
+    .basic-bar {
+        margin: 0.5rem;
     }
 
 
@@ -157,9 +162,10 @@
 
     .text-outline {
         border-radius: 30px;
-        padding: 10%;
+        /* padding: 10%; */
         border: var(--black-outline);
         cursor: default;
+        width: 70vw;
     }
 
 
@@ -191,6 +197,8 @@
     .projects-grid-outer {
         display: flex;
         flex-direction: column;
+        margin: 0.5rem;
+        /* gap: 0.5rem; */
     }
 
     .projects-grid-item {
