--- a/style.css
+++ b/style.css
@@ -113,7 +113,7 @@ a, .btn {
     box-shadow: .5vh .5vh 1.5vh 0 var(--light-shadow);
     align-items: center;
     height: 10vh;
-    margin: 1.5%;
+    margin: 1.5rem;
 }
 
 
@@ -151,23 +151,39 @@ section {
     justify-content: center;
     align-items: center;
     text-align: center;
-    margin: 1.5%;
-    height: 100vh;
+    margin: 1.5rem;
+    border-radius: 30px;
+    box-shadow: .5vh .5vh 1.5vh 0 var(--light-shadow);
+    /* height: 100vh; */
+
+    min-height: 60rem;
+    
 }
 
 .outer-container {
     display: flex;
     flex-direction: column;
-    border-radius: 30px;
-    box-shadow: .5vh .5vh 1.5vh 0 var(--light-shadow);
-    height: 100%;
+    /* height: 45rem; */
+    height: fit-content;
     width: 100%;
-    justify-content: center; 
+
+    justify-content: center;
     align-items: center; 
 }
 
 
 /* PROFILE  SECTION*/
+#profile {
+    background-color: var(--medium-pink);
+}
+
+.profile-inner-container {
+    display: flex;
+    flex-direction: column;
+    margin: 2.5rem;
+    gap: 2.5rem;
+}
+
 .profile-name-outer{
     display: flex;
     flex-direction: column;
@@ -224,6 +240,10 @@ section {
 
 
 /* ABOUT SECTION*/
+#about {
+    background-color: var(--extra-light-pink);
+}
+
 .overview-container {
     display: flex;
     flex-direction: column;
@@ -245,13 +265,13 @@ section {
     cursor: default;
     border: var(--black-outline);
     width: 40vw;
-    height: 20vh;
+    height: 12rem;
 }
 
 
 /* EXPERIENCE SERCTION */
 #experience {
-    height: 100%;
+    background-color: var(--medium-pink);
 }
 
 .experience-btn {
@@ -264,10 +284,15 @@ section {
     border-radius: 30px;
     background-color: var(--extra-light-pink);
     margin: 1.5rem;
-    padding: 2.5%;
+    padding: 1.5rem;
     gap: 2rem;
-    /* width: 85%; */
-    height: 12vh;
+
+    /* height: 5rem; */
+    /* height: fit-content; */
+    height: 8rem;
+    max-width: 80rem;
+   
+
     border: var(--black-outline);
 }
 
@@ -279,14 +304,13 @@ section {
 }
 
 .experience-headers {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
+    display: block;
+    text-align: left;
     justify-content: center;
 }
 
 .experience-desc {
-    display: flex;
+    display: block;
     width: 50%; 
     margin-left: auto;
     margin-right: 0;
@@ -338,13 +362,13 @@ section {
 
 /* PROJECTS SECTION */
 #projects {
-    height: 100%;
+    background-color: var(--extra-light-pink);
 }
 
 .projects-grid-outer {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 10px;
+    gap: 0.5rem;
     margin: 1.5rem;
 }
 
@@ -356,7 +380,7 @@ section {
     border: var(--black-outline);
     border-radius: 30px;
     cursor: default;
-    height: 45vh;
+    max-height: 25rem;
 }
 
 .projects-desc {
@@ -364,6 +388,10 @@ section {
 }
 
 /* CONTACT SECTION */
+#contact {
+    background-color: var(--medium-pink);
+}
+
 #contact-form {
     display: flex;
     flex-direction: column;
