--- a/style.css
+++ b/style.css
@@ -291,29 +291,56 @@ section {
     /* height: fit-content; */
     height: 8rem;
     max-width: 80rem;
-   
-
     border: var(--black-outline);
 }
 
-.experience-inner-container:hover {
+/* .experience-inner-container:hover {
+    cursor: pointer;
+    transition:  all 300ms ease;
+    transform: scale(1.025);
+    box-shadow: .5vh .5vh 1.5vh 0 var(--light-shadow);
+} */
+
+.experience-grid-outer {
+    display: grid;
+    grid-template-rows: repeat(3, 1fr);
+    gap: 0.5rem;
+    margin: 1.5rem;
+}
+
+.experience-grid-item {
+    background-color: var(--extra-light-pink);
+    display: flex;
+    flex-direction: column;
+    padding: 1.5rem;
+    border: var(--black-outline);
+    border-radius: 30px;
+    cursor: default;
+    max-height: 25rem;
+
+    justify-content: center;
+}
+
+.experience-grid-item:hover {
     cursor: pointer;
     transition:  all 300ms ease;
     transform: scale(1.025);
     box-shadow: .5vh .5vh 1.5vh 0 var(--light-shadow);
 }
 
+
 .experience-headers {
-    display: block;
+    display: flex;
+    flex-direction: column;
     text-align: left;
-    justify-content: center;
+    width: 50%;
+    /* border: solid blue 2px; */
 }
 
 .experience-desc {
-    display: block;
+    display: flex;
     width: 50%; 
-    margin-left: auto;
-    margin-right: 0;
+    /* border: solid red 2px; */
 }
 
 .dialog {
