--- a/media.css
+++ b/media.css
@@ -85,7 +85,7 @@
 
 /* MOBILE VIEW */
 /* @media screen and (max-width: 992px) { */
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 560px) {
 
     body {
         font-size: var(--moble-font-base);
@@ -144,10 +144,6 @@
 
 
     /* MOBILE ABOUT */
-    #about {
-        height: 100%;
-    }
-
     .overview-container {
         margin: 1.5rem;
     }
@@ -177,6 +173,7 @@
 
     .experience-grid-item {
         padding: 0.5rem;
+        gap: 0.5rem;
     }
 
     .experience-desc {
@@ -194,7 +191,6 @@
         display: flex;
     }
 
-
      /* MOBILE PROJECTS */
     .projects-grid-outer {
         display: flex;
@@ -205,6 +201,7 @@
 
     .projects-grid-item {
         padding: 0.5rem;
+        gap: 0.5rem;
     }
 
 }
