--- a/style.css
+++ b/style.css
@@ -51,6 +51,19 @@ a:link, a:visited, a:hover, a:active {
   color: black; /* or use the hex code #000000 */
 }
 
+section {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin: 1.5rem;
+    border-radius: 30px;
+    box-shadow: .5vh .5vh 1.5vh 0 var(--light-shadow);
+    /* height: 100vh; */
+
+    min-height: 60rem;
+}
+
 .subtitle {
     font-size: var(--font-size-subtitle);
     font-weight: var(--font-bold);
@@ -73,6 +86,36 @@ a:link, a:visited, a:hover, a:active {
 .body-small {
     font-size: var(--font-small);
 }
+
+
+/* GENERAL */
+.outer-container {
+    display: flex;
+    flex-direction: column;
+    /* height: 45rem; */
+    height: fit-content;
+    width: 100%;
+
+    justify-content: center;
+    align-items: center; 
+}
+
+.grid-outer {
+    display: grid;
+    gap: 1rem;
+    margin: 1.5rem;
+}
+
+.grid-item {
+    display: flex;
+    flex-direction: column;
+    padding: 1.5rem;
+    border: var(--black-outline);
+    border-radius: 30px;
+    cursor: default;
+    max-height: 25rem;
+}
+
 
 /* TRANSITION */
 a, .btn {
@@ -104,6 +147,7 @@ a, .btn {
     box-shadow: .5vh .5vh 1.5vh 0 var(--shadow);
     transform: scale(1.05);
 }
+
 
 /* FOOTER AND HEADER BAR */
 .basic-bar {
@@ -142,33 +186,6 @@ a:hover {
 
 #blur-container.blur {
     filter: blur(5px);
-}
-
-
-/* SECTION */
-section {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    margin: 1.5rem;
-    border-radius: 30px;
-    box-shadow: .5vh .5vh 1.5vh 0 var(--light-shadow);
-    /* height: 100vh; */
-
-    min-height: 60rem;
-    
-}
-
-.outer-container {
-    display: flex;
-    flex-direction: column;
-    /* height: 45rem; */
-    height: fit-content;
-    width: 100%;
-
-    justify-content: center;
-    align-items: center; 
 }
 
 
@@ -278,46 +295,12 @@ section {
     display: none;
 }
 
-.experience-inner-container {
-    display: flex;
-    align-items: center;
-    border-radius: 30px;
-    background-color: var(--extra-light-pink);
-    margin: 1.5rem;
-    padding: 1.5rem;
-    gap: 2rem;
-
-    /* height: 5rem; */
-    /* height: fit-content; */
-    height: 8rem;
-    max-width: 80rem;
-    border: var(--black-outline);
-}
-
-/* .experience-inner-container:hover {
-    cursor: pointer;
-    transition:  all 300ms ease;
-    transform: scale(1.025);
-    box-shadow: .5vh .5vh 1.5vh 0 var(--light-shadow);
-} */
-
 .experience-grid-outer {
-    display: grid;
     grid-template-rows: repeat(3, 1fr);
-    gap: 0.5rem;
-    margin: 1.5rem;
 }
 
 .experience-grid-item {
     background-color: var(--extra-light-pink);
-    display: flex;
-    flex-direction: column;
-    padding: 1.5rem;
-    border: var(--black-outline);
-    border-radius: 30px;
-    cursor: default;
-    max-height: 25rem;
-
     justify-content: center;
 }
 
@@ -327,7 +310,6 @@ section {
     transform: scale(1.025);
     box-shadow: .5vh .5vh 1.5vh 0 var(--light-shadow);
 }
-
 
 .experience-headers {
     display: flex;
@@ -393,26 +375,18 @@ section {
 }
 
 .projects-grid-outer {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 0.5rem;
-    margin: 1.5rem;
+    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+    /* grid-template-columns: repeat(3, 1fr); */
 }
 
 .projects-grid-item {
     background-color: var(--medium-pink);
-    display: flex;
-    flex-direction: column;
-    padding: 1.5rem;
-    border: var(--black-outline);
-    border-radius: 30px;
-    cursor: default;
-    max-height: 25rem;
 }
 
 .projects-desc {
     margin-top: auto;
 }
+
 
 /* CONTACT SECTION */
 #contact {
